--- a/package.json
+++ b/package.json
@@ -23,10 +23,8 @@
     "dependencies": {
         "escodegen": "^1.11.0",
         "esprima": "^4.0.0",
-        "esprima-eval": "0.0.1",
         "jquery": "^3.3.1",
-        "mocha-lcov-reporter": "^1.3.0",
-        "static-eval": "^2.0.0"
+        "mocha-lcov-reporter": "^1.3.0"
     },
     "devDependencies": {
         "cross-env": "^5.2.0",
